--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,20 @@
 		<title>React shopping App | Francesco Rizzi</title>
 		<meta name="description" content="A React with Redux exercise on creating a shopping app.">
 		
+		<!-- Google Tag Manager -->
+		<script>(function( w, d, s, l, i ){
+			w[ l ] = w[ l ] || [];
+			w[ l ].push({
+							'gtm.start' : new Date().getTime(),
+							event       : 'gtm.js'
+						});
+			var f   = d.getElementsByTagName(s)[ 0 ], j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
+			j.async = true;
+			j.src   = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+			f.parentNode.insertBefore(j, f);
+		})(window, document, 'script', 'dataLayer', 'GTM-T8CWQD6');</script>
+		<!-- End Google Tag Manager -->
+		
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 		<link rel="stylesheet" href="App.css">
 		
@@ -45,6 +59,12 @@
 		<noscript>
 			You need to enable JavaScript to run this app.
 		</noscript>
+		<!-- Google Tag Manager (noscript) -->
+		<noscript>
+			<iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T8CWQD6"
+					height="0" width="0" style="display:none;visibility:hidden"></iframe>
+		</noscript>
+		<!-- End Google Tag Manager (noscript) -->
 		<div id="root"></div>
 	</body>
 </html>
