--- a/public/index.html
+++ b/public/index.html
@@ -45,11 +45,11 @@
 		<!--OG-->
 		<meta property="og:title" content="React shopping App | Francesco Rizzi" />
 		<meta property="og:description" content="A React with Redux exercise on creating a shopping app." />
-		<meta property="og:image" content="http://francescorizzi.info/experiments/react-shopping-app/images/og.jpg" />
-		<meta name="twitter:image" content="http://francescorizzi.info/experiments/react-shopping-app/images/og.jpg">
-		<meta property="og:url" content="http://francescorizzi.info/experiments/react-shopping-app/" />
+		<meta property="og:image" content="https://frarizzi.science/experiments/react-shopping-app/images/og.jpg" />
+		<meta name="twitter:image" content="https://frarizzi.science/experiments/react-shopping-app/images/og.jpg">
+		<meta property="og:url" content="https://frarizzi.science/experiments/react-shopping-app/" />
 		<meta property="og:type" content="article" />
-		<meta property="og:site_name" content="francescorizzi.info" />
+		<meta property="og:site_name" content="frarizzi.science" />
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:image:alt" content="An image showing the React shopping app logo">
 		<meta name="twitter:site" content="@0xFFrancesco">
